--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "lint": "eslint ./src",
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build GENERATE_SOURCEMAP=false",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -40,7 +40,7 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.48",
     "@material-ui/pickers": "^3.2.10",
-    "@material-ui/styles": "^4.9.6",
+    "@material-ui/styles": "^4.10.0",
     "@mdx-js/react": "^1.5.8",
     "@reach/router": "^1.3.3",
     "@react-pdf/renderer": "^1.6.8",
@@ -60,8 +60,9 @@
     "jss": "^10.1.1",
     "jss-rtl": "^0.3.0",
     "jwt-decode": "^2.2.0",
-    "lodash": "^4.17.15",
+    "lodash": "^4.17.19",
     "material-table": "^1.57.2",
+    "material-ui": "^1.0.0-beta.47",
     "moment": "^2.24.0",
     "notistack": "^0.9.9",
     "nprogress": "^0.2.0",
@@ -74,6 +75,7 @@
     "react-big-calendar": "^0.24.1",
     "react-chartjs-2": "^2.9.0",
     "react-country-region-selector": "^2.1.0",
+    "react-device-detect": "^1.13.1",
     "react-dom": "^16.13.1",
     "react-draft-wysiwyg": "^1.14.4",
     "react-dropzone": "^10.2.2",
